fix center align

--- a/index.css
+++ b/index.css
@@ -121,7 +121,6 @@ input {
 
 @media (max-width: 700px) {
     main {
-        align-items: start;
         padding: 0px 10px;
     }
 
